2007-11-21  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesTest.cs: Moved class outside
	the fixture (because it made them all nested). Removed test for 
	InternalsVisibleToAttribute. This must be done from another assembly 
	(or it will mess every results in this one).

2007-11-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidUncalledPrivateCodeTest.cs: Word around bug #343465 so test
	all works under Mono and MS runtimes.

2007-11-21  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Handle more cases (don't check for
	method.Name). Add test case for finalizers.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidToStringOnStringsTest.cs: Unit tests (Lukasz Knop, GSoC 2007)
	* AvoidUncalledPrivateCodeTest.cs: Unit tests (Nidhi Rawal, GSoC 2007)
	* AvoidUninstantiatedInternalClassesTest.cs: Unit tests (Nidhi Rawal,
	GSoC 2007)
	* DontIgnoreMethodResultTest.cs: Unit tests (Lukasz Knop, GSoC 2007)
	* UsingStringLengthInsteadOfCheckingEmptyStringTest.cs: Unit tests 
	(Nidhi Rawal, GSoC 2007)
	* Test.Rules.Performance.mdp: Update project file.

2007-09-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUnusedParametersTest.cs: Added a test case for empty method.

2007-08-31  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUnusedParametersTest.cs: New. Unit tests for
	AvoidUnusedParametersRule.

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.

2006-09-20  Jonathan Chambers  <joncham@gmail.com>

	* Test.Rules.Performance.csproj: Make reference to nunit.framework
	not a specific version for portability.
	
2006-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* EmptyDestructorTest.cs: Fixed test case, EmptyDestructor should not
	return null (as this is an error, i.e. counter-productive).

2006-08-21  Sebastien Pouliot  <sebastien@ximian.com>
